# eugeroic

./: .bumpversion.cfg  .gitignore  LICENSE.txt  README.md  run-tests-with-dbus.bash  setup.cfg
.github/workflows/: actions.yml
src/eugeroic/: __init__.py  __main__.py  cli.py  decorator.py  version.py
src/eugeroic/drivers/: __init__.py
src/eugeroic/drivers/linux/: bus.py  driver.py
src/eugeroic/drivers/macos/: cfstringref.py  driver.py  iokit.py
src/eugeroic/drivers/null/: driver.py
src/eugeroic/drivers/windows/: display.py  driver.py
tests/: conftest.py  test_stay_awake.py  test_wakefulness.py
