[metadata]
name = eugeroic
version = attr: eugeroic.version.__version__
description = Prevent your computer from sleeping
long_description = file: README.md, LICENSE.txt
long_description_content_type = text/markdown
url = https://github.com/sixty-north/eugeroic
author = Sixty North AS
author_email: systems+eugeroic@sixty-north.com
keywords = macos sleep
license = MIT License
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries :: Python Modules
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.11

[options]
zip_safe = True
include_package_data = False
package_dir =
    =src
packages = find:
install_requires =
    pyobjc-framework-Cocoa>=9.2; platform_system=='Darwin'

[options.extras_require]
dev = bumpversion
doc = sphinx ; sphinx_rtd_theme ; better_apidoc
test = pytest ; coverage ; pytest-cov ; hypothesis; tox

[options.packages.find]
where = src
